--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aws-sdk": "^2.1333.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^8.2.0",
+    "html2canvas": "^1.4.1",
+    "image-data-uri": "^2.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
+    "react-s3": "^1.3.1",
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
     "uuid": "^8.3.2",
